@@ -78,6 +78,10 @@
    - djm@cvs.openbsd.org 2008/02/10 09:55:37
      [sshd_config.5]
      mantion that "internal-sftp" is useful with ForceCommand too
+   - djm@cvs.openbsd.org 2008/02/10 10:54:29
+     [servconf.c session.c]
+     delay ~ expansion for ChrootDirectory so it expands to the logged-in user's
+     home, rather than the user who starts sshd (probably root)
 
 20080119
  - (djm) Silence noice from expr in ssh-copy-id; patch from
@@ -3606,4 +3610,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4836 2008/02/10 11:47:24 djm Exp $
+$Id: ChangeLog,v 1.4837 2008/02/10 11:48:55 djm Exp $
